F21 fix the z-index bug

--- a/client/my-app/src/pages/catalogue_page/el/Filter/index.css
+++ b/client/my-app/src/pages/catalogue_page/el/Filter/index.css
@@ -1,3 +1,7 @@
+.filter-container {
+    z-index: var(--ui-index-2);
+}
+
 .catalogue-filter-container {
     width: 1110px;
     height: 60px;
